# MoidSolver

./: .gitignore  README.md  pyproject.toml  requirements.txt
moid/: __init__.py
moid/analysis/: __init__.py  benchmarks.py  flagger.py  hero.py  population.py  spots.py  stats.py
moid/classifier/: __init__.py  archetypes.py
moid/db/: __init__.py  repository.py  schema.py
moid/game/: __init__.py  abstraction.py  cards.py  equity.py  tree.py
moid/parser/: __init__.py  ignition.py  models.py
moid/solver/: __init__.py  best_response.py  cfr.py  strategy.py
moid/viz/: __init__.py  ranges.py
scripts/: __init__.py  analyze_population.py  import_hands.py  my_stats.py  review_hand.py  solve_spot.py
tests/: __init__.py  conftest.py  test_analysis.py  test_cards.py  test_db.py  test_equity.py  test_parser.py  test_solver.py
